@@ -2,6 +2,7 @@
 10/19/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.4.6 'Marshal West':
 	- List of libraries cleaned.
+	- rtcp sockets fixed.
 
 10/16/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.2.4.5 'Marshal West':
